public class HotelManagementSystem {
    
}
